Fixed whatever it was in the HTML that was making HTML whitespace in the header right corner

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} 
 
 .header {
   display: flex;
@@ -13,33 +13,8 @@
   color: white;
   width: 100%;
   padding: 1em;
-  font-size: 10px;
-  /*max-width: 20em; remember this for using flexbox for other divs in this assignment*/
 }
 
-.searchcontainer h2 {
-  display: block;
-  width: 80%;
-  max-width: 100%;
-}
-
-/*Searchcontainer style start*/
-.searchcontainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  flex-direction: column;
-  max-width: 30em;
-  margin: 0.5em;
-}
-
-.form-input {
-  /*needed block display to make button take up whole width of this container that I wanted*/
-  display: block;
-  width: 100%;
-  max-width: 100%;
-}
-
-.searchbtn {
-  margin: 0;
+.row {
+  border: red 1px dashed;
 }
